src/main/zcode/parser/.antlr/ZCodeParser.py
# Generated from c:/Users/HIEU/Desktop/BTL PPL/assignment3-initial/src/main/zcode/parser/ZCode.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class ZCodeParser ( Parser ):

    grammarFileName = "ZCode.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'true'", "'false'", "'number'", "'bool'", 
                     "'string'", "'return'", "'var'", "'dynamic'", "'func'", 
                     "'for'", "'until'", "'by'", "'break'", "'continue'", 
                     "'if'", "'else'", "'elif'", "'begin'", "'end'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'='", "'<-'", "'!='", 
                     "'<'", "'<='", "'>'", "'>='", "'...'", "'=='", "'and'", 
                     "'or'", "'not'", "'('", "')'", "'['", "']'", "','" ]

    symbolicNames = [ "<INVALID>", "TRUE", "FALSE", "NUMBER", "BOOL", "STRING", 
                      "RETURN", "VAR", "DYNAMIC", "FUNC", "FOR", "UNTIL", 
                      "BY", "BREAK", "CONTINUE", "IF", "ELSE", "ELIF", "BEGIN", 
                      "END", "ADD", "SUB", "MUL", "DIV", "MOD", "EQ", "ASSIGN", 
                      "NEQ", "LT", "LTE", "GT", "GTE", "CONCAT", "EQEQ", 
                      "AND", "OR", "NOT", "LPAREN", "RPAREN", "LBRACK", 
                      "RBRACK", "COMMA", "ID", "BOOLEAN", "STRINGLIT", "NUMBERLIT", 
                      "NEWLINE", "WS", "COMMENTS", "UNCLOSE_STRING", "ILLEGAL_ESCAPE", 
                      "ERROR_CHAR" ]

    RULE_program = 0
    RULE_listDeclared = 1
    RULE_declared = 2
    RULE_variablesDeclared = 3
    RULE_explicitTypeDeclared = 4
    RULE_explicitType = 5
    RULE_implicitVarDeclared = 6
    RULE_implicitDynamicDeclared = 7
    RULE_initVariableValueOrNull = 8
    RULE_initVariableValue = 9
    RULE_numbersList = 10
    RULE_functionDeclared = 11
    RULE_prametersList = 12
    RULE_paramsPrime = 13
    RULE_param = 14
    RULE_statementList = 15
    RULE_statement = 16
    RULE_declaredStatement = 17
    RULE_assignmentStatement = 18
    RULE_indexOperatorNew = 19
    RULE_conditionStatement = 20
    RULE_elseIfStatement = 21
    RULE_elseStatement = 22
    RULE_conditionAndStatement = 23
    RULE_conditionExpress = 24
    RULE_forStatement = 25
    RULE_continueStatement = 26
    RULE_breakStatement = 27
    RULE_returnStatement = 28
    RULE_blockStatement = 29
    RULE_callFunction = 30
    RULE_callStatement = 31
    RULE_expressList = 32
    RULE_express = 33
    RULE_express1 = 34
    RULE_express2 = 35
    RULE_express3 = 36
    RULE_express4 = 37
    RULE_express5 = 38
    RULE_express6 = 39
    RULE_express7 = 40
    RULE_express8 = 41
    RULE_arrayLiteral = 42
    RULE_ignore = 43

    ruleNames =  [ "program", "listDeclared", "declared", "variablesDeclared", 
                   "explicitTypeDeclared", "explicitType", "implicitVarDeclared", 
                   "implicitDynamicDeclared", "initVariableValueOrNull", 
                   "initVariableValue", "numbersList", "functionDeclared", 
                   "prametersList", "paramsPrime", "param", "statementList", 
                   "statement", "declaredStatement", "assignmentStatement", 
                   "indexOperatorNew", "conditionStatement", "elseIfStatement", 
                   "elseStatement", "conditionAndStatement", "conditionExpress", 
                   "forStatement", "continueStatement", "breakStatement", 
                   "returnStatement", "blockStatement", "callFunction", 
                   "callStatement", "expressList", "express", "express1", 
                   "express2", "express3", "express4", "express5", "express6", 
                   "express7", "express8", "arrayLiteral", "ignore" ]

    EOF = Token.EOF
    TRUE=1
    FALSE=2
    NUMBER=3
    BOOL=4
    STRING=5
    RETURN=6
    VAR=7
    DYNAMIC=8
    FUNC=9
    FOR=10
    UNTIL=11
    BY=12
    BREAK=13
    CONTINUE=14
    IF=15
    ELSE=16
    ELIF=17
    BEGIN=18
    END=19
    ADD=20
    SUB=21
    MUL=22
    DIV=23
    MOD=24
    EQ=25
    ASSIGN=26
    NEQ=27
    LT=28
    LTE=29
    GT=30
    GTE=31
    CONCAT=32
    EQEQ=33
    AND=34
    OR=35
    NOT=36
    LPAREN=37
    RPAREN=38
    LBRACK=39
    RBRACK=40
    COMMA=41
    ID=42
    BOOLEAN=43
    STRINGLIT=44
    NUMBERLIT=45
    NEWLINE=46
    WS=47
    COMMENTS=48
    UNCLOSE_STRING=49
    ILLEGAL_ESCAPE=50
    ERROR_CHAR=51

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def listDeclared(self):
            return self.getTypedRuleContext(ZCodeParser.ListDeclaredContext,0)


        def EOF(self):
            return self.getToken(ZCodeParser.EOF, 0)

        def NEWLINE(self, i:int=None):
            if i is None:
                return self.getTokens(ZCodeParser.NEWLINE)
            else:
                return self.getToken(ZCodeParser.NEWLINE, i)

        def getRuleIndex(self):
            return ZCodeParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)




    def program(self):

        localctx = ZCodeParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 91
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==46:
                self.state = 88
                self.match(ZCodeParser.NEWLINE)
                self.state = 93
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 94
            self.listDeclared()
            self.state = 95
            self.match(ZCodeParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListDeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declared(self):
            return self.getTypedRuleContext(ZCodeParser.DeclaredContext,0)


        def listDeclared(self):
            return self.getTypedRuleContext(ZCodeParser.ListDeclaredContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_listDeclared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListDeclared" ):
                listener.enterListDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListDeclared" ):
                listener.exitListDeclared(self)




    def listDeclared(self):

        localctx = ZCodeParser.ListDeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_listDeclared)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,1,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 97
                self.declared()
                self.state = 98
                self.listDeclared()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 100
                self.declared()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDeclared(self):
            return self.getTypedRuleContext(ZCodeParser.FunctionDeclaredContext,0)


        def variablesDeclared(self):
            return self.getTypedRuleContext(ZCodeParser.VariablesDeclaredContext,0)


        def ignore(self):
            return self.getTypedRuleContext(ZCodeParser.IgnoreContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_declared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclared" ):
                listener.enterDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclared" ):
                listener.exitDeclared(self)




    def declared(self):

        localctx = ZCodeParser.DeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declared)
        try:
            self.state = 107
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [9]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.functionDeclared()
                pass
            elif token in [3, 4, 5, 7, 8]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.variablesDeclared()
                self.state = 105
                self.ignore()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VariablesDeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explicitTypeDeclared(self):
            return self.getTypedRuleContext(ZCodeParser.ExplicitTypeDeclaredContext,0)


        def implicitVarDeclared(self):
            return self.getTypedRuleContext(ZCodeParser.ImplicitVarDeclaredContext,0)


        def implicitDynamicDeclared(self):
            return self.getTypedRuleContext(ZCodeParser.ImplicitDynamicDeclaredContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_variablesDeclared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVariablesDeclared" ):
                listener.enterVariablesDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVariablesDeclared" ):
                listener.exitVariablesDeclared(self)




    def variablesDeclared(self):

        localctx = ZCodeParser.VariablesDeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_variablesDeclared)
        try:
            self.state = 112
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 109
                self.explicitTypeDeclared()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 2)
                self.state = 110
                self.implicitVarDeclared()
                pass
            elif token in [8]:
                self.enterOuterAlt(localctx, 3)
                self.state = 111
                self.implicitDynamicDeclared()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExplicitTypeDeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def explicitType(self):
            return self.getTypedRuleContext(ZCodeParser.ExplicitTypeContext,0)


        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def initVariableValueOrNull(self):
            return self.getTypedRuleContext(ZCodeParser.InitVariableValueOrNullContext,0)


        def LBRACK(self):
            return self.getToken(ZCodeParser.LBRACK, 0)

        def numbersList(self):
            return self.getTypedRuleContext(ZCodeParser.NumbersListContext,0)


        def RBRACK(self):
            return self.getToken(ZCodeParser.RBRACK, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_explicitTypeDeclared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplicitTypeDeclared" ):
                listener.enterExplicitTypeDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplicitTypeDeclared" ):
                listener.exitExplicitTypeDeclared(self)




    def explicitTypeDeclared(self):

        localctx = ZCodeParser.ExplicitTypeDeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_explicitTypeDeclared)
        try:
            self.state = 125
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 114
                self.explicitType()
                self.state = 115
                self.match(ZCodeParser.ID)
                self.state = 116
                self.initVariableValueOrNull()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 118
                self.explicitType()
                self.state = 119
                self.match(ZCodeParser.ID)
                self.state = 120
                self.match(ZCodeParser.LBRACK)
                self.state = 121
                self.numbersList()
                self.state = 122
                self.match(ZCodeParser.RBRACK)
                self.state = 123
                self.initVariableValueOrNull()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExplicitTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def STRING(self):
            return self.getToken(ZCodeParser.STRING, 0)

        def BOOL(self):
            return self.getToken(ZCodeParser.BOOL, 0)

        def NUMBER(self):
            return self.getToken(ZCodeParser.NUMBER, 0)

        def getRuleIndex(self):
            return ZCodeParser.RULE_explicitType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExplicitType" ):
                listener.enterExplicitType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExplicitType" ):
                listener.exitExplicitType(self)




    def explicitType(self):

        localctx = ZCodeParser.ExplicitTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_explicitType)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 127
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImplicitVarDeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def VAR(self):
            return self.getToken(ZCodeParser.VAR, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def initVariableValue(self):
            return self.getTypedRuleContext(ZCodeParser.InitVariableValueContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicitVarDeclared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplicitVarDeclared" ):
                listener.enterImplicitVarDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplicitVarDeclared" ):
                listener.exitImplicitVarDeclared(self)




    def implicitVarDeclared(self):

        localctx = ZCodeParser.ImplicitVarDeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_implicitVarDeclared)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 129
            self.match(ZCodeParser.VAR)
            self.state = 130
            self.match(ZCodeParser.ID)
            self.state = 131
            self.initVariableValue()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ImplicitDynamicDeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def DYNAMIC(self):
            return self.getToken(ZCodeParser.DYNAMIC, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def initVariableValueOrNull(self):
            return self.getTypedRuleContext(ZCodeParser.InitVariableValueOrNullContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_implicitDynamicDeclared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterImplicitDynamicDeclared" ):
                listener.enterImplicitDynamicDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitImplicitDynamicDeclared" ):
                listener.exitImplicitDynamicDeclared(self)




    def implicitDynamicDeclared(self):

        localctx = ZCodeParser.ImplicitDynamicDeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_implicitDynamicDeclared)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 133
            self.match(ZCodeParser.DYNAMIC)
            self.state = 134
            self.match(ZCodeParser.ID)
            self.state = 135
            self.initVariableValueOrNull()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitVariableValueOrNullContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def express(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_initVariableValueOrNull

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitVariableValueOrNull" ):
                listener.enterInitVariableValueOrNull(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitVariableValueOrNull" ):
                listener.exitInitVariableValueOrNull(self)




    def initVariableValueOrNull(self):

        localctx = ZCodeParser.InitVariableValueOrNullContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_initVariableValueOrNull)
        try:
            self.state = 140
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [26]:
                self.enterOuterAlt(localctx, 1)
                self.state = 137
                self.match(ZCodeParser.ASSIGN)
                self.state = 138
                self.express()
                pass
            elif token in [46]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class InitVariableValueContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ASSIGN(self):
            return self.getToken(ZCodeParser.ASSIGN, 0)

        def express(self):
            return self.getTypedRuleContext(ZCodeParser.ExpressContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_initVariableValue

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterInitVariableValue" ):
                listener.enterInitVariableValue(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitInitVariableValue" ):
                listener.exitInitVariableValue(self)




    def initVariableValue(self):

        localctx = ZCodeParser.InitVariableValueContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_initVariableValue)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 142
            self.match(ZCodeParser.ASSIGN)
            self.state = 143
            self.express()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class NumbersListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def NUMBERLIT(self):
            return self.getToken(ZCodeParser.NUMBERLIT, 0)

        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def numbersList(self):
            return self.getTypedRuleContext(ZCodeParser.NumbersListContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_numbersList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNumbersList" ):
                listener.enterNumbersList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNumbersList" ):
                listener.exitNumbersList(self)




    def numbersList(self):

        localctx = ZCodeParser.NumbersListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_numbersList)
        try:
            self.state = 149
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.match(ZCodeParser.NUMBERLIT)
                self.state = 146
                self.match(ZCodeParser.COMMA)
                self.state = 147
                self.numbersList()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(ZCodeParser.NUMBERLIT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclaredContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNC(self):
            return self.getToken(ZCodeParser.FUNC, 0)

        def ID(self):
            return self.getToken(ZCodeParser.ID, 0)

        def LPAREN(self):
            return self.getToken(ZCodeParser.LPAREN, 0)

        def prametersList(self):
            return self.getTypedRuleContext(ZCodeParser.PrametersListContext,0)


        def RPAREN(self):
            return self.getToken(ZCodeParser.RPAREN, 0)

        def blockStatement(self):
            return self.getTypedRuleContext(ZCodeParser.BlockStatementContext,0)


        def returnStatement(self):
            return self.getTypedRuleContext(ZCodeParser.ReturnStatementContext,0)


        def ignore(self):
            return self.getTypedRuleContext(ZCodeParser.IgnoreContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_functionDeclared

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDeclared" ):
                listener.enterFunctionDeclared(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDeclared" ):
                listener.exitFunctionDeclared(self)




    def functionDeclared(self):

        localctx = ZCodeParser.FunctionDeclaredContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionDeclared)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 151
            self.match(ZCodeParser.FUNC)
            self.state = 152
            self.match(ZCodeParser.ID)
            self.state = 153
            self.match(ZCodeParser.LPAREN)
            self.state = 154
            self.prametersList()
            self.state = 155
            self.match(ZCodeParser.RPAREN)
            self.state = 165
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
            if la_ == 1:
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 156
                    self.ignore()


                self.state = 159
                self.blockStatement()
                pass

            elif la_ == 2:
                self.state = 161
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if _la==46:
                    self.state = 160
                    self.ignore()


                self.state = 163
                self.returnStatement()
                pass

            elif la_ == 3:
                self.state = 164
                self.ignore()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class PrametersListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def paramsPrime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamsPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_prametersList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrametersList" ):
                listener.enterPrametersList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrametersList" ):
                listener.exitPrametersList(self)




    def prametersList(self):

        localctx = ZCodeParser.PrametersListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_prametersList)
        try:
            self.state = 169
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [3, 4, 5]:
                self.enterOuterAlt(localctx, 1)
                self.state = 167
                self.paramsPrime()
                pass
            elif token in [38]:
                self.enterOuterAlt(localctx, 2)

                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamsPrimeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self):
            return self.getTypedRuleContext(ZCodeParser.ParamContext,0)


        def COMMA(self):
            return self.getToken(ZCodeParser.COMMA, 0)

        def paramsPrime(self):
            return self.getTypedRuleContext(ZCodeParser.ParamsPrimeContext,0)


        def getRuleIndex(self):
            return ZCodeParser.RULE_paramsPrime

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamsPrime" ):
                listener.enterParamsPrime(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamsPrime" ):
                listener.exitParamsPrime(self)




    def paramsPrime(self):
